# keycounter

./: .gitignore  README.md  floating.html  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  floating-main.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: key_listener.rs  lib.rs  main.rs  state.rs  storage.rs
src/__tests__/: Heatmap.test.tsx  Leaderboard.test.tsx
src/components/: ErrorBoundary.tsx  FloatingBall.tsx  Heatmap.tsx  Leaderboard.tsx  Settings.tsx
src/styles/: globals.css
